<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/title_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin16"
            android:fontFamily="@font/montserrat_alternates"
            android:gravity="center"
            tools:text="Заметка №1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_alternates"
            android:gravity="center"
            android:text="@string/name_note_textview" />


        <EditText
            android:id="@+id/name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin16"
            android:fontFamily="@font/montserrat_alternates"
            android:gravity="center"
            android:hint="@string/name_note_edittext"
            android:inputType="textCapSentences"
            android:textSize="@dimen/text20"
            android:autofillHints="" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin16"
            android:fontFamily="@font/montserrat_alternates"
            android:gravity="center"
            android:text="@string/content_note_textview" />


        <EditText
            android:id="@+id/note_details_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin16"
            android:fontFamily="@font/montserrat_alternates"
            android:gravity="center"
            android:hint="@string/content_note_edittext"
            android:inputType="textCapSentences"
            android:textSize="@dimen/text16"
            android:autofillHints="" />

        <Button
            android:id="@+id/btn_create_note"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin4"
            android:fontFamily="@font/montserrat_alternates"
            android:text="@string/save_note"
            android:textSize="@dimen/text8"/>


    </LinearLayout>
</androidx.core.widget.NestedScrollView>